--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,6 @@ import:
   version: ^1.1.3
   subpackages:
   - assert
+- package: github.com/orchestrate-io/dvr
+- package: github.com/joho/godotenv
+  version: ^1.0.0
